[tool.poetry]
name = "toblerone-clock-reborn"
version = "0.1.0"
description = ""
authors = ["Kevin Claytor <KE.Claytor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.4"
pandas = "^1.3.4"
bokeh = "^2.4.2"
adafruit-circuitpython-neopixel = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
